# edwh-nostr-messsagebus

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
examples/: PraktijkervaringSchema.py  tasks.py
src/edwh-nostr-messagebus/: __about__.py  client.py  tasks.py
src/edwh_nostr_messagebus/: __about__.py  __init__.py  client.py
tests/: test_requirements.py
